--- a/themes/jamesrwilliams/assets/scss/site.scss
+++ b/themes/jamesrwilliams/assets/scss/site.scss
@@ -15,8 +15,13 @@ body {
 body {
 	background: #eeeeee;
 	padding: 0;
-	font-size: 16px;
+	font-size: 14px;
 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+
+	@include media-query($breakpoint_md){
+		font-size: 18px;
+	}
+
 }
 
 .container {
