--- a/themes/jamesrwilliams/assets/scss/templates/_post-single.scss
+++ b/themes/jamesrwilliams/assets/scss/templates/_post-single.scss
@@ -1,7 +1,3 @@
-article.post {
-	font-size: 18px;
-}
-
 .post {
 
 	&-content {
@@ -13,6 +9,11 @@ article.post {
 
 		& > :last-child {
 			margin-bottom: 0;
+		}
+
+		ol,
+		ul {
+			padding-left: 20px;
 		}
 
 		@include media-query($breakpoint_md) {
