--- a/themes/jamesrwilliams/assets/scss/templates/_post_list.scss
+++ b/themes/jamesrwilliams/assets/scss/templates/_post_list.scss
@@ -20,7 +20,7 @@
 	}
 
 	a {
-		color: $accent;
+		color: darken($accent, 10%);
 		text-decoration: none;
 	}
 
